src/components/ExportHistoryButton/ExportHistoryButton.css
.memori-export-history-button--panel {
    position: absolute;
    z-index: 10;
    right: 0.5rem;
    padding: var(--memori-button-padding);
    border: 1px solid var(--memori-button-border-color);
    border-radius: var(--memori-button-radius);
    margin-top: 0.5rem;
    background: #fff;
    box-shadow: var(--memori-button-box-shadow);
}

.memori-export-history-button--panel button+button {
    margin-left: 0.5rem;
}

.memori-export-history-button--align-left .memori-export-history-button--panel {
    right: auto;
    left: 0.5rem;
}

